# agent-interview

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/: agent-interview.md
interview_rag_server/: README.md  __init__.py  learning_path.py  question_bank.py  requirements.txt  server.py  vector_store.py
interview_rag_server/data/: learning_paths.json  questions.json  topic_file_mapping.json  topic_index.json  web_source_mapping.json
interview_rag_server/data/web_sources/: agentclientprotocol_com____2b3e561dc2.md  ai_google_dev__gemini-api_docs_code-execution__61a8afb437.md  ai_google_dev__gemini-api_docs_function-calling__8437d0a96b.md  arxiv_org__abs_2210.03629__fb94233ba9.md  arxiv_org__abs_2302.04761__617e28ba4f.md  arxiv_org__abs_2304.03442__fefbb121e5.md  arxiv_org__abs_2305.16291__7faa5c7e07.md  arxiv_org__abs_2307.13854__c6dd7b341a.md  arxiv_org__abs_2308.03688__a46f1651f6.md  arxiv_org__abs_2310.06770__95cba86086.md  arxiv_org__abs_2401.13649__35a3f33d70.md  arxiv_org__abs_2405.15793__faa2d1dbd6.md  arxiv_org__abs_2602.08004__12db4cc2db.md  arxiv_org__abs_2604.14228__55ca0498d2.md  blog_langchain_com____0464a858b0.md  claudecoding_dev____45f506d837.md  code_claude_com__docs_en_agent-sdk_skills__3c392545f9.md  code_claude_com__docs_en_hooks__e49887dd7b.md  code_claude_com__docs_en_overview__0e6ee67e51.md  code_claude_com__docs_en_skills__f599cc5ec2.md  code_claude_com__docs_en_sub-agents__406beac7a6.md  (+46 more)
interview_rag_server/knowledge_base/: __init__.py  build_index.py  chunker.py  embedder.py  fetch_web_sources.py
tests/: __init__.py  test_chunker.py  test_learning_path.py  test_question_bank.py  test_server.py  test_vector_store.py
