[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-interview-rag"
version = "0.1.0"
description = "MCP server for AI Agent interview simulation with RAG knowledge base"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ddhjx" },
]
keywords = ["mcp", "interview", "rag", "ai-agent", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=2.0.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
build = ["html2text", "requests", "beautifulsoup4"]

[project.urls]
Homepage = "https://github.com/Ddhjx-code/agent-interview"
Repository = "https://github.com/Ddhjx-code/agent-interview"
Issues = "https://github.com/Ddhjx-code/agent-interview/issues"

[project.scripts]
mcp-server-interview-rag = "interview_rag_server.server:main"

[tool.setuptools.packages.find]
include = ["interview_rag_server*"]

[tool.setuptools.package-data]
interview_rag_server = [
    "data/faiss_index.bin",
    "data/metadata.json",
    "data/questions.json",
    "data/learning_paths.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
